# active-learning-microscopy

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: defect_search.yaml  fairness.yaml  misspecification.yaml  noise_sweep.yaml  nonstationary.yaml  reconstruction.yaml  size_sweep.yaml  sparsity_sweep.yaml
data/: README.md
data/sample/: scene_64.npz  scene_smooth_64.npz
docs/: api.md  surrogate_card.md
notebooks/: tutorial.ipynb
results/: defect_search.json  fairness.json  metrics.json  misspecification.json  noise_sweep.json  nonstationary.json  reconstruction.json  size_sweep.json  sparsity_sweep.json
scripts/: build_notebook.py  make_figures.py  make_metrics.py  run_all.py
src/activescan/: __init__.py  benchmark.py  cli.py  gp.py  io.py  metrics.py  plots.py  reconstruct.py  sim.py  strategies.py
tests/: test_artifacts.py  test_benchmark.py  test_cli.py  test_gp.py  test_io.py  test_metrics.py  test_reconstruct.py  test_sim.py  test_strategies.py
