[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "activescan"
version = "0.1.0"
description = "Simulated autonomous-microscopy benchmark: when does an actively steered probe beat a raster scan? From-scratch Gaussian-process surrogate, acquisition strategies, and space-filling baselines with exact ground truth"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aamir Malik" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff==0.15.22",
    "black==26.5.1",
    "nbclient>=0.9",
    "nbformat>=5.9",
    "ipykernel>=6.25",
    "pillow>=10.0",
]

[project.scripts]
activescan = "activescan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
